style.css
body {
    background-color: #FBFCFF;
    font-family: 'Poppins', sans-serif;
    color: #1e1e1e;
    margin: 0;
    height: 100vh;
    display: flex;
    flex-direction: column;
}

.main {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
}

.container {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 1rem;
    font-variant-caps: all-petite-caps;
}

.header {
    height: auto;
}

.header h1, .icon {
    position: relative;
}

.header h1::before, .icon::before {
    content: '';
    position: absolute;
    width: 100%;
    height: 4px;
    border-radius: 4px;
    background-color: #18272F;
    bottom: 0;
    left: 0;
    transform-origin: right;
    transform: scaleX(0);
    transition: transform .3s ease-in-out;
}
  
.header h1:hover::before, .icon:hover::before {
transform-origin: left;
transform: scaleX(1);
}

.content {
    flex-grow: 1;
}

.footer {
    display: flex;
    align-items: center; 
}

